--- a/BitfenixNeos/.xmonad/xmobar-top.conf
+++ b/BitfenixNeos/.xmonad/xmobar-top.conf
@@ -4,10 +4,10 @@ Config {
     "xft:Font Awesome 5 Free:pixelsize=10:antialias=true:hinting=true"
   ]
   , allDesktops = True
-  , bgColor = "#304562"
-  , fgColor = "#95CBF0"
+  , bgColor = "#130B0E"
+  , fgColor = "#787A80"
   , alpha = 255
-  , position = Top
+  , position = TopW C 20
   , commands = [
     Run Date "%A, %d %B %Y" "date1" 10
     , Run Date "<fn=1>\xf017</fn> %r" "date2" 10
