--- a/BitfenixNeos/.stalonetrayrc
+++ b/BitfenixNeos/.stalonetrayrc
@@ -1,7 +1,7 @@
 decorations none
 transparent false
 dockapp_mode none
-background "#304562"
+background "#130B0E"
 kludges force_icons_size
 geometry 1-0
 grow_gravity NE
