--- a/BitfenixNeos/.xmonad/xmobar.conf
+++ b/BitfenixNeos/.xmonad/xmobar.conf
@@ -4,10 +4,10 @@ Config {
     "xft:Font Awesome 5 Free:pixelsize=10:antialias=true:hinting=true"
   ]
   , allDesktops = True
-  , bgColor = "#304562"
-  , fgColor = "#95CBF0"
+  , bgColor = "#130B0E"
+  , fgColor = "#787A80"
   , alpha = 255
-  , position = Bottom
+  , position = BottomW C 60
   , commands = [
     Run Battery [
       --Template
@@ -30,7 +30,7 @@ Config {
     , Run CoreTemp [
       "-t", "<fn=1>\xf06d</fn> <core0>-<core1>",
       "-L", "40", "-H", "60",
-      "-l", "blue", "-n", "teal", "-h", "red"
+      "-l", "aqua", "-n", "teal", "-h", "red"
     ] 10
     , Run Memory [
       "-t", "<fn=1>\xf538</fn> <usedratio>%"
@@ -44,10 +44,10 @@ Config {
     , Run Wireless "wlp0s26u1u6" [
       "-t", "<fn=1>\xf1eb</fn> <essid> <quality>%"
     ] 10
-    , Run Network "enp3s0" [
+    , Run Network "wlp0s26u1u6" [
       "-t", "| <fn=1>\xf0e8</fn>  <fn=1>\xf093</fn> <tx>Kb/s <fn=1>\xf019</fn> <rx>Kb/s"
     ] 10
-    , Run Network "wlp0s26u1u6" [
+    , Run Network "enp3s0" [
       "-t", "| <fn=1>\xf093</fn> <tx>Kb/s <fn=1>\xf019</fn> <rx>Kb/s"
     ] 10
     , Run Date "<fn=1>\xf073</fn> %A - %d %B %Y" "date1" 10
