--- a/BitfenixNeos/.xmonad/xmobar.conf
+++ b/BitfenixNeos/.xmonad/xmobar.conf
@@ -4,8 +4,8 @@ Config {
     "xft:Font Awesome 5 Free:pixelsize=10:antialias=true:hinting=true"
   ]
   , allDesktops = True
-  , bgColor = "#130B0E"
-  , fgColor = "#787A80"
+  , bgColor = "#203032"
+  , fgColor = "#C9C3B4"
   , alpha = 255
   , position = BottomW C 60
   , commands = [
