--- a/BitfenixNeos/.config/gtk-3.0/settings.ini
+++ b/BitfenixNeos/.config/gtk-3.0/settings.ini
@@ -1,10 +1,10 @@
 [Settings]
 gtk-button-images=1
-gtk-cursor-theme-name=Hacked-White
+gtk-cursor-theme-name=oreo_grey_cursors
 gtk-cursor-theme-size=0
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
-gtk-font-name=Cantarell 10
+gtk-font-name=Sans 10
 gtk-icon-theme-name=Zafiro-Icons-Variant-A
 gtk-menu-images=1
 gtk-theme-name=custom
