--- a/BitfenixNeos/.xmonad/xmobar.conf
+++ b/BitfenixNeos/.xmonad/xmobar.conf
@@ -7,7 +7,7 @@ Config {
   , bgColor = "#203032"
   , fgColor = "#C9C3B4"
   , alpha = 255
-  , position = BottomW C 60
+  , position = BottomW C 75
   , commands = [
     Run Battery [
       --Template
@@ -48,7 +48,7 @@ Config {
       "-t", "| <fn=1>\xf0e8</fn>  <fn=1>\xf093</fn> <tx>Kb/s <fn=1>\xf019</fn> <rx>Kb/s"
     ] 10
     , Run Network "enp3s0" [
-      "-t", "| <fn=1>\xf093</fn> <tx>Kb/s <fn=1>\xf019</fn> <rx>Kb/s"
+      "-t", " <fn=1>\xf093</fn> <tx>Kb/s <fn=1>\xf019</fn> <rx>Kb/s"
     ] 10
     , Run Date "<fn=1>\xf073</fn> %A - %d %B %Y" "date1" 10
     , Run Date "<fn=1>\xf017</fn> %r" "date2" 10
@@ -56,5 +56,5 @@ Config {
   ]
   , sepChar = "%"
   , alignSep = "//"
-  , template = " %StdinReader% / %wlp0s26u1u6wi% %wlp0s26u1u6% %enp3s0% / %cpu% | %coretemp% | %memory% | %swap% | %disku% | %date2% "
+  , template = " %StdinReader% / %enp3s0% / %cpu% | %coretemp% | %memory% | %swap% | %disku% | %date2% "
 }
