--- a/BitfenixNeos/.xmonad/xmobar-top.conf
+++ b/BitfenixNeos/.xmonad/xmobar-top.conf
@@ -4,8 +4,8 @@ Config {
     "xft:Font Awesome 5 Free:pixelsize=10:antialias=true:hinting=true"
   ]
   , allDesktops = True
-  , bgColor = "#203032"
-  , fgColor = "#C9C3B4"
+  , bgColor = "#585E62"
+  , fgColor = "#E3E7F0"
   , alpha = 255
   , position = TopW C 30
   , commands = [
