--- a/BitfenixNeos/.xmonad/xmobar.conf
+++ b/BitfenixNeos/.xmonad/xmobar.conf
@@ -1,11 +1,11 @@
 Config {
-  font = "xft:xos4 Terminess Powerline:pixelsize=10:antialias=true:hinting=true,Font Awesome:pixelsize=10"
+  font = "xft:xos4 Terminess Powerline:pixelsize=10:antialias=true:hinting=true,Font Awesome 5 Free:pixelsize=10:antialias=true:hinting=true"
   , additionalFonts = [
-    "xft:Font Awesome 5 Free:pixelsize=10:antialias=true:hinting=true"
+    "xft:Font Awesome 5 Free:pixelsize=10"
   ]
   , allDesktops = True
-  , bgColor = "#203032"
-  , fgColor = "#C9C3B4"
+  , bgColor = "#585E62"
+  , fgColor = "#E3E7F0"
   , alpha = 255
   , position = BottomW C 75
   , commands = [
