--- a/BitfenixNeos/.config/termite/config
+++ b/BitfenixNeos/.config/termite/config
@@ -2,13 +2,12 @@
 font = Monaco 10
 font = Monospace 10
 
-
 [colors]
 # special
 foreground      = #c5c8c6
 foreground_bold = #c5c8c6
 cursor          = #c5c8c6
-background	= #203032
+background	= rgba(27, 34, 51, 0.8)
 
 # black
 color0  = #282a2e
@@ -28,7 +27,7 @@ color11 = #f0c674
 
 # blue
 color4  = #5f819d
-color12 = #C9C3B4
+color12 = #644159
 
 # magenta
 color5  = #85678f
