--- a/BitfenixNeos/.xmonad/xmobar.conf
+++ b/BitfenixNeos/.xmonad/xmobar.conf
@@ -1,11 +1,13 @@
 Config {
-  font = "xft:xos4 Terminess Powerline:pixelsize=10:antialias=true:hinting=true,Font Awesome 5 Free:pixelsize=10:antialias=true:hinting=true"
+  font = "xft:xos4 Terminess Powerline:pixelsize=10:antialias=true:hinting=true,
+       	 Source Han Sans JP Heavy:pixelsize=10:antialias=true:hinting=true,
+       	 Font Awesome 5 Free:pixelsize=10:antialias=true:hinting=true"
   , additionalFonts = [
     "xft:Font Awesome 5 Free:pixelsize=10"
   ]
   , allDesktops = True
-  , bgColor = "#585E62"
-  , fgColor = "#E3E7F0"
+  , bgColor = "#1B2233"
+  , fgColor = "#FED4BA"
   , alpha = 255
   , position = BottomW C 75
   , commands = [
@@ -41,20 +43,22 @@ Config {
     , Run DiskU [
       ("/", "<fn=1>\xf0a0</fn> <used>/<size>")
     ] ["-L", "20", "-H", "50", "-m", "1", "-p", "3"] 20
-    , Run Wireless "wlp0s26u1u6" [
+    , Run Wireless "wlp2s0b1" [
       "-t", "<fn=1>\xf1eb</fn> <essid> <quality>%"
     ] 10
-    , Run Network "wlp0s26u1u6" [
+    , Run Network "wlp2s0b1" [
       "-t", "| <fn=1>\xf0e8</fn>  <fn=1>\xf093</fn> <tx>Kb/s <fn=1>\xf019</fn> <rx>Kb/s"
     ] 10
     , Run Network "enp3s0" [
       "-t", " <fn=1>\xf093</fn> <tx>Kb/s <fn=1>\xf019</fn> <rx>Kb/s"
     ] 10
-    , Run Date "<fn=1>\xf073</fn> %A - %d %B %Y" "date1" 10
+    , Run Date "%A, %d %B %Y" "date1" 10
     , Run Date "<fn=1>\xf017</fn> %r" "date2" 10
+    , Run Com "days" [] "days" 3600
+    , Run Com "dwall" [] "dwall" 1800
     , Run StdinReader
   ]
   , sepChar = "%"
   , alignSep = "//"
-  , template = " %StdinReader% / %enp3s0% / %cpu% | %coretemp% | %memory% | %swap% | %disku% | %date2% "
+  , template = " %dwall% %date1%, %days% / %StdinReader% / %cpu% | %coretemp% | %memory% | %swap% | %disku% | %enp3s0% | %date2% "
 }
