--- a/BitfenixNeos/.xmonad/xmobarR.conf
+++ b/BitfenixNeos/.xmonad/xmobarR.conf
@@ -9,7 +9,7 @@ Config {
   , bgColor = "#303A3B"
   , fgColor = "#B3A496"
   , alpha = 255
-  , position = BottomW C 12
+  , position = BottomW R 21
   , commands = [
     Run Battery [
       --Template
@@ -62,5 +62,5 @@ Config {
   ]
   , sepChar = "%"
   , alignSep = "//"
-  , template = "/ %StdinReader% /"
+  , template = "// %days%・%date%・%time% %dwall% "
 }
