--- a/BitfenixNeos/.xmonad/xmobarL.conf
+++ b/BitfenixNeos/.xmonad/xmobarL.conf
@@ -9,7 +9,7 @@ Config {
   , bgColor = "#303A3B"
   , fgColor = "#B3A496"
   , alpha = 255
-  , position = BottomW C 12
+  , position = BottomW L 21
   , commands = [
     Run Battery [
       --Template
@@ -62,5 +62,5 @@ Config {
   ]
   , sepChar = "%"
   , alignSep = "//"
-  , template = "/ %StdinReader% /"
+  , template = " %cpu% %coretemp% ・ %memory% %swap% ・ %disku% ・ %enp3s0% //"
 }
